slight change to text

--- a/Assignment_Week_1_Part_1_JBurns.ipynb
+++ b/Assignment_Week_1_Part_1_JBurns.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just off the top of my head I wanted to look at my favorite Celtics players from the last few years and graph their overlap with other big names in the league. In addition I got to play around with the network x functions. Based simply on readability I think that the draw_circular graph looks much better than the autogerated one from .draw().\n"
+    "Just off the top of my head I wanted to look at my favorite Celtics players from the last few years and graph their overlap with other big names in the league. In addition I got to play around with the network x functions. Based simply on readability I think that the draw_circular graph looks much better than the autogerated one (spring I think?) from .draw().\n"
    ]
   }
  ],
